# jobman

./: .gitignore  CMakeLists.txt  README.md  about.ui  build_app.bat  build_app.sh  build_universal.sh  clickfilter.cpp  clickfilter.h  error.ui  filedrop.cpp  filedrop.h  job.cpp  job.h  jobman.cpp  jobman.qrc  jobman.ui  listwidget.cpp  listwidget.h  mac.h  mac.mm  main.cpp  message.cpp  message.h  monitor.cpp  monitor.ui  options.cpp  options.h  options.ui  platform.h  platform_win.cpp  preferences.cpp  preferences.ui  preset.cpp  preset.h  process.cpp  process.h  question.ui  queue.cpp  queue.h  (+2 more)
presets/: Convert image no options.json  Convert image using sips.json  Convert image.json
resources/: App.css  App.entitlements  App.entitlements.in  AppIcon.icns  AppIcon.sh
resources/AppStore/: privacy-policy.md
scripts/: deploydmg.sh  macdeploy.sh  macdmg.sh
sources/: clickfilter.cpp  clickfilter.h  filedrop.cpp  filedrop.h  icctransform.cpp  icctransform.h  job.cpp  job.h  jobman.cpp  jobman.h  jobman.qrc  jobman.ui  jobtree.cpp  jobtree.h  listwidget.cpp  listwidget.h  mac.h  mac.mm  main.cpp  message.cpp  message.h  message.ui  monitor.cpp  monitor.h  monitor.ui  optionsdialog.cpp  optionsdialog.h  optionsdialog.ui  optionswidget.cpp  optionswidget.h  platform.h  platform_mac.mm  platform_win.cpp  preferences.cpp  preferences.h  preferences.ui  preset.cpp  preset.h  process.cpp  process.h  (+12 more)
